# alice

./: README.md  config.py  docker-compose-prod.yml  docker-compose-stage.yml  docker-compose.yml  gunicorn.conf.py  main.py  mo_alias.xlsx  pyproject.toml  run_celery.py  spec_list.csv  test_fuzz_search.py  test_pacient_service.py  test_snils.py
celery_app/: app.py  config.py
celery_app/tasks/: long_operations.py  test_tasks.py
clients/: fer_client.py
clients/templates/: CreateAppointmentRequest.xml  GetMOInfoExtendedRequest.xml  GetMOResourceInfoRequest.xml  GetPatientInfoBySnilsRequest.xml  GetPatientInfoRequest.xml  GetScheduleInfoRequest.xml  IdentifyPatientByPhoneRequest.xml
deploy/: Dockerfile  deploy-stage.sh  deploy.sh
fsm/: states.py
handlers/: appointment.py  confirmation.py  doctor_selection.py  error.py  help.py  patient_introduction.py  schedule_selection.py  step_back.py
requests_to_FER/: get_patient_info.py
services/: fio_searcher.py  mo_alias_service.py  org_searcher.py  patient_service.py  profession_searcher.py  redis_service.py
tests/: test_celery.py  test_fer.py  test_phone.py  test_redis.py
utils/: date_parser.py  dates_utils.py  declension_fio.py  gender_detector.py  orgsPrepare.py  slots_parser.py
validators/: phone_number_validator.py  snils_number_validator.py
web/: middleware.py  server.py
