[project]
name = "alice-skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=21.2.0",
    "aliceio>=0.2.3",
    "asyncio>=4.0.0",
    "pandas>=2.3.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.10.1",
    "pytrovich>=0.0.4",
    "xmlsec>=1.3.16",
    "celery>=5.5.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "pymorphy3>=2.0.4",
    "fuzzywuzzy>=0.18.0",
    "levenshtein>=0.27.1",
    "openpyxl>=3.1.5"
]
[tool.setuptools]
py-modules = []